--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,16 @@
   font-weight: 600;
 }
 
-.ottaline,
-.ottaline-sm {
+.ottaline {
   color: #05445e;
   /* -webkit-text-fill-color: #f1f1f1; */
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #f1f1f1;
-}
-
-.ottaline {
-  -webkit-text-stroke-width: 2px;
 }
 
 .ottaline-sm {
   -webkit-text-stroke-width: 0.2px;
+  -webkit-text-stroke-color: #f1f1f1;
 }
 
 .main {
@@ -36,6 +33,7 @@
   background-image: url("https://source.unsplash.com/1920x1080/?wallpaper");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -45,6 +43,8 @@
 .search-box {
   display: block;
   /* border: 10px solid #000; */
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(5px);
   border-radius: 15px;
   padding: 5vh 5vw;
 }
@@ -81,6 +81,10 @@ footer {
   top: 95vh;
   text-align: center;
   color: #f1f1f1;
+}
+
+footer p {
+  text-shadow: 1px 1px #05445e;
 }
 
 footer p a {
